Fix border radius masks for transformed children.

A previous change starting using the compositing_bounds_ for
determining if a border radius clipping mask is required. However,
that bound does not include transformations that will be applied to
the child's layer. This change uses the child's layer bound in its
nearest clipping ancestor's space, and performs all clip testing in
that space.

Bug: 751798
Cq-Include-Trybots: master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2
Change-Id: I7e55c11cd54198dcfea2dc547e27133294465795
Reviewed-on: https://chromium-review.googlesource.com/539835
Commit-Queue: Stephen Chenney <schenney@chromium.org>
Reviewed-by: Chris Harrelson <chrishtr@chromium.org>
Cr-Commit-Position: refs/heads/master@{#492036}
Former-commit-id: 973b7b9212b8d7b956d50f00792995d9712e4186