third_party/WebKit/Source/core/layout/compositing/CompositedLayerMapping.h
@@ -495,15 +495,21 @@ class CORE_EXPORT CompositedLayerMapping final : public GraphicsLayerClient {
       const Vector<GraphicsLayerPaintInfo>& layers);
 
   // Conservatively check that a sequence of border-radius clips do not clip
-  // this layer. The compositing_ancestor is the nearest compositing ancestor
-  // layer and we can stop checking clips at that layer because higher layer
-  // clips will be applied elsewhere.
+  // this layer. The rectangle to check for clipping is the child's layer
+  // bound in the nearest clipping ancestor's space. The
+  // nearest_clipping_ancestor is the place where we need to start the search
+  // for border radius clips. The compositing_ancestor is the nearest
+  // compositing ancestor layer and we can stop checking clips at that layer
+  // because higher layer clips will be applied elsewhere.
   // This is a fast approximate test. Depending on the shape of the child and
   // the size of the clips, this method may return true when in fact
   // the child is not clipped. We accept the approximation because most border
   // radii are small and the outcome is used to reduce the number of layers,
   // not influence correctness.
-  bool AncestorRoundedCornersWillClip(const PaintLayer* compositing_ancestor);
+  bool AncestorRoundedCornersWillClip(
+      const FloatRect& child_rect_in_nearest_clipping_space,
+      const PaintLayer* nearest_clipping_ancestor,
+      const PaintLayer* compositing_ancestor);
 
   // Return true in |owningLayerIsClipped| iff |m_owningLayer|'s compositing
   // ancestor is not a descendant (inclusive) of the clipping container for
